--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,8 +152,8 @@ main {
 
 .card img {
   width: 100%;
-  height: 220px;
-  object-fit: cover;
+  height: auto;
+  display: block;
 }
 
 .card-content {
